--- a/2g3t-main/index.html
+++ b/2g3t-main/index.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Aulas - Jesus"</title>
+    <title>"Dupla - RL"</title>
     <link rel="stylesheet" href="./css/estilo.css">
     <script src="./script/principal.js"></script>
 </head>
 <body>
-    
+    <head >
+menu 
+    </head>
+    <section class="calc_simples">
+<div class="display_simples">
+    <input type="text" value="0" id="resultado" readonly >
+</div>
+<div class="teclas">
+    <button onclick="digitando ('7')">7</button>
+    <button  onclick="digitando ('8')">8</button>
+    <button  onclick="digitando ('9')">9</button>
+    <button>&#247;</button>
+    <button   onclick="digitando ('4')">4</button>
+    <button  onclick="digitando ('5')">5</button>
+    <button  onclick="digitando ('6')">6</button>
+    <button>x</button>
+    <button  onclick="digitando ('1')">1</button>
+    <button  onclick="digitando ('2')">2</button> 
+    <button  onclick="digitando ('3')">3</button>
+    <button>-</button>
+    <button  onclick="digitando ('0')">0</button>
+    <button  onclick="digitando ('.')">.</button>
+    <button>+</button>
+    <button id="igual">=</button>
+
+</div>
+    </section>
+
 </body>
 </html>
