--- a/2g3t-main/index.html
+++ b/2g3t-main/index.html
@@ -17,6 +17,12 @@ menu
     <input type="text" value="0" id="resultado" readonly >
 </div>
 <div class="teclas">
+
+    <button onclick="desligar()">On</button>
+    <button  onclick="zerar()">C</button>
+    <button  onclick="porcentagem ()">%</button>
+    <button onabort="raiz_quadrada ()">&#8730;</button>
+
     <button onclick="digitando ('7')">7</button>
     <button  onclick="digitando ('8')">8</button>
     <button  onclick="digitando ('9')">9</button>
@@ -36,6 +42,6 @@ menu
 
 </div>
     </section>
-
-</body>
-</html>
+    <script>
+        desligar();
+    </script>
