--- a/index.html
+++ b/index.html
@@ -4,44 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Meu Site"</title>
-    <link rel="stylesheet" href="./css/estilo.css">
-    <script src="./script/principal.js"></script>
+    <title>Document</title>
+    <script src="script.js"></script>
 </head>
-<body>
-    <header>
-         Menu
-    </header>
-     <section class="calc_simples">
-        <div class="display_simples">
-            <input type="text" value="0" id="resultado" readonly>
-        </div>
-        <div class="teclas">
-            <button onclick="desligar()">On</button>
-            <button onclick="zerar()">C</button>
-            <button onclick="porcentagem()">%</button>
-            <button onclick="raiz_quadrada()">&#8730;</button>
+<body onload="atualizar_tela()">
+    Nome: <input type="text" id="nome"><br>
 
-            <button onclick="digitando('7')">7</button>
-            <button onclick="digitando('8')">8</button>
-            <button onclick="digitando('9')">9</button>
-            <button onclick="operacao('div')">&#247;</button>
-            <button onclick="digitando('4')">4</button>
-            <button onclick="digitando('5')">5</button>
-            <button onclick="digitando('6')">6</button>
-            <button onclick="operacao('mult')">x</button>
-            <button onclick="digitando('1')">1</button>
-            <button onclick="digitando('2')">2</button>
-            <button onclick="digitando('3')">3</button>
-            <button onclick="operacao('sub')">-</button>
-            <button onclick="digitando('0')">0</button>
-            <button onclick="digitando('.')">.</button>
-            <button onclick="operacao('soma')">+</button>
-            <button id="igual" onclick="calcula()">=</button>
-        </div>
-     </section>
-<script>
-    desligar();
-</script>
+    <button onclick="inserir_ultimo()">Inserir Ultimo</button><br>
+    <button onclick="inserir_primeiro()">Inserir Primeiro</button><br>
+    <button onclick="deletar_primeiro()">Deletar Primeiro</button><br>
+    <button onclick="deletar_ultimo()">Deletar Ultimo</button><br>
+    <button onclick="limpar_lista()">Limpar Lista</button><br>
+    <button onclick="ordenar_az()">Ordenar AZ</button><br>
+    <button onclick="ordenar_az()">Ordenar AZ</button><br>
+
+
+
+    <span id="lista"></span>
+
 </body>
 </html>
