--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"Meu Site"</title>
-    <link rel="stylesheet" href="./css/estilo.css">
-    <script src="./script/principal.js"></script>
+    <link rel="stylesheet" href="estilo.css">
+    <script src="principal.js"></script>
 </head>
 <body>
     <header>
